# AI-Sentinel-audits

./: .gitignore  CHANGELOG.md  OpenClaw-Dashboard.bat  OpenClaw-Dashboard.ps1  README.md  openclaw.localstub.yaml  openclaw.yaml  pyproject.toml
custom_rules/: regex_rules.yml  semgrep_rules.yml
docs/: API_CONTRACTS_v0_2.md  API_CONTRACTS_v0_3.md  QUICKSTART.md  TUNING_GUIDE.md
examples/: local_model_stub.py  sample_finding.json
examples/configs/: model_provider_snippet.yaml  static_plugin_snippet.yaml
examples/plugins/: config_linter_plugin.py  (+3 more)
openclaw/: __init__.py  ai_code_review.py  ai_schema.py  auto_register.py  cli.py  config.py  contracts.py  cross_file_reasoning.py  dashboard.py  ensemble_scoring.py  finding_builder.py  learning_memory.py  logging_utils.py  model_runtime.py  models.py  passive_recon.py  pipeline.py  report_generator.py  report_pack.py  scope_guard.py  scoring.py  snippet_runner.py  static_analysis.py  triage.py
prompt-injection-sandbox-shad/: README.md
prompts/: auth_access.txt  business_logic.txt  crypto_security.txt  general_security.txt  input_validation.txt  ssrf.txt  trust_boundaries.txt
templates/: triage_friendly_report.md
tests/: __init__.py  test_ai_code_review.py  test_auto_register.py  test_contracts.py  test_cross_file_reasoning.py  test_ensemble_scoring.py  test_finding_builder.py  test_learning_memory.py  test_passive_recon.py  test_pipeline.py  test_plugins.py  test_report_generator.py  test_report_pack.py  test_scope_guard.py  test_snippet_runner.py  test_static_analysis.py  test_triage.py  test_utils.py
(+3 files in other folders)
